crates/bityzba/tests/ui/fail/wrong_value_type.rs
use bityzba::{invariant, new};

#[invariant(self.start <= self.end)]
struct Span {
    start: usize,
    end: usize,
}

fn main() {
    let _ = new!(Span {
        start: "zero",
        end: 2,
    });
}
